Bug 202862 - cannot move some contacts to other groups
Summary: cannot move some contacts to other groups
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 268754 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-06 21:40 UTC by Kai Krakow
Modified: 2014-07-09 21:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Krakow 2009-08-06 21:40:50 UTC
Version:           0.70.90 (using 4.3.00 (KDE 4.3.0), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.30-gentoo-r4

After activating the skype plugin, some of my contacts were moved out of their groups to the root contact folder. I deactivated the plugin, the skype contacts are all gone. But I cannot move my contacts back to the groups they belonged to.

The contacts in question are metacontacts. Drag and drop on these contacts doesn't grab them with the mouse, it just does some sort of multichoice selection (a selection bar marks all contacts I move the mouse over). Also tried to move these contacts with right-click, move to group - no change. They stay in the root folder.
Comment 1 Pali Rohár 2009-08-08 16:54:28 UTC
If you starting skype protocol in kopete, protocol get skype group for all contacts. Linux skype client doesnt support groups, but skype public api (used by protocol in kopete), windows and mac version support. So all skype contacts have root group in linux skype client (if you dont move using windows/mac version; skype groups are save on skype server) and kopete move all metacontacts to their group.

I can fix this: If skype contact in linux skype client is in root group, kopete will not move this metacontact.

If you try move metacontact with skype contact, skype protocol try move it too. If it fail (Now I cant get this) after next start, kopete try again move metacontact with skype contact move to group from linux skype client.
Comment 2 Pali Rohár 2009-08-08 19:09:03 UTC
Can you send kDebug output when you moving contacts?
Set up in kdebugdialog 14311 kopete (skype) and then start kopete in konsole
Comment 3 Kai Krakow 2009-08-12 21:34:22 UTC
I've enabled kdebugdialog skype... Additionally I enabled contactlist. However nothing is logged if I want to move the contacts to another group. I tried both via right-click and drag-and-drop. Drag-and-drop does not work because the mouse just does not grab these contacts (I can still move other contacts via drag-and-drop). Instead as soon as I release the mouse button it simply opens the chat window for this contact (no matter where I moved the mouse).

BTW: The skype plugin is not enabled any more as I think this is irrelevant for this bug. I will do another debug run with skype enabled and comment on the other report.

I suppose there's no debug output because these stuck contacts can simply not be moved. They don't react to any efforts to move them. There's no crash. I simply silently does not work.
Comment 4 Pali Rohár 2009-08-13 08:48:51 UTC
I try this in offline mode and I have same problem. I cant move contacts when kopete is offline (or protocol). I cant move contacts from all account, when is offline. So this is kopete bug. No in skype protocol.

Moving to other group in kopete works only if account of contact in online. And radio button for moving to other group is for all contact saved. So this is bug too.
Comment 5 Kai Krakow 2009-08-13 11:57:46 UTC
Yeah I just suspected this, too. On another PC which partially shares the same accounts I can also no longer move these contacts (I they have been automatically moved to the root folder).

Comparing the systems I found that only meta-contacts are affected which have contacts of disconnected accounts attached.

This is a problem as my setup does not allow to have all accounts online at the same time.
Comment 6 silvano.jorge 2010-02-03 13:20:53 UTC
I have this bug also. I have installed the skype pulgin. When I try to move one contact to another group it fails (sometimes it seems to do it) and the next time I run kopete the move is undone and the contact is in the original group. I move some contacts to another group with a wlm client in windows without problem and it appears well in kopete.
Comment 7 Pali Rohár 2010-02-03 13:30:01 UTC
If you want move metacontact to other group, make sure that all accounts in kopete is online and connected.
Comment 8 Kai Krakow 2010-02-03 13:50:40 UTC
(In reply to comment #7)
> If you want move metacontact to other group, make sure that all accounts in
> kopete is online and connected.

I cannot believe that this is the proposed "fix" to "make sure that all acounts in kopete" are online. This may not always be possible - may it be due to firewall restrictions in a mobile environment. Kopete should allow to move groups and defer the server update until later using some smart sync implementation.
Comment 9 silvano.jorge 2010-02-03 15:31:49 UTC
When any of my accounts related with the metacontact is not online kopete doesn't allow me to move the metacontact. I am not sure but I think that the problem is with msn protocol.
Comment 10 Kai Krakow 2010-02-03 16:53:51 UTC
I can probably second comment 9's guess - this bug occurs with MSN contacts here, too.
Comment 11 Pali Rohár 2011-08-22 15:37:17 UTC
Patch which should fix this problem is on reviewboard:
https://svn.reviewboard.kde.org/r/6773/
Comment 12 Pali Rohár 2013-03-08 17:52:44 UTC
SVN commit 1343429 by pali:

Do not ignore action moving contact to group from Gui if some accounts are offline

Instead ignoring action "move contact to group" when some accounts are offline
this patch ask user warning message if he really want to move contact to group.
This can be usefull if some accounts are offline and user want to move metacontact
(with contact belong to offline account) into other group.

REVIEW: 6773



 M  +6 -1      kopetecontactlistview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1343429
Comment 13 Pali Rohár 2014-07-09 21:17:10 UTC
*** Bug 268754 has been marked as a duplicate of this bug. ***