Do not ignore action moving contact to group from Gui if some accounts are offline

Instead ignoring action "move contact to group" when some accounts are offline
this patch ask user warning message if he really want to move contact to group.
This can be usefull if some accounts are offline and user want to move metacontact
(with contact belong to offline account) into other group.

REVIEW: 6773
BUG: 202862


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1343429